# saga-gis

./: .gitignore  .travis.yml  appveyor.yml  saga.linux  saga.vc10.sln  saga_api_Doxyfile  saga_api_Doxyfile_chm  saga_setup.iss  saga_setup_readme.rtf  saga_setup_win32.iss  saga_setup_x64.iss
saga-gis/: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  NEWS  README  changes.md  configure.ac  configure.in  readme.md  version.cmake
saga-gis/cmake/: Config.cmake  config.h.cmake
saga-gis/cmake/modules/: FindGDAL.cmake  FindHPDF.cmake  FindLAS.cmake  FindODBC.cmake  FindOpenCV.cmake  FindPDAL.cmake  FindPostgres.cmake  FindProj.cmake  FindQhull.cmake  FindSVM.cmake  FindVIGRA.cmake  Findcurl.cmake  Finddxflib.cmake  Findfftw3.cmake  Findgeotrans.cmake  Findlibsvm.cmake  Findpdal.cmake  Findproj.cmake  Findvigra.cmake
saga-gis/cmake/shared/: gen_version_string.cmake  treat_warnings_as_error.cmake  windows_version_info.cmake  windows_version_info.rc.in
saga-gis/m4/: ax_lib_postgresql.m4
saga-gis/shared_cmake/scripts/: enable_warnings.cmake  load_git_variables.cmake  require-cpp11.cmake  windows_version_info.cmake
saga-gis/src/: CMakeLists.txt  Makefile.am  gpl.txt  install.txt  lgpl.txt  saga.sln  saga.vc10.sln  saga.vc14.sln
saga-gis/src/accessories/: CMakeLists.txt
saga-gis/src/accessories/debug/: README.md  gdb_saga_api_pp.py
saga-gis/src/accessories/docs/: saga_on_mac.md  saga_on_mac.odt  saga_on_mac_build.sh  saga_python_example.bat  saga_python_example.ipynb  saga_python_example.py  saga_python_readme.txt  saga_toolchains_cheat_sheet.xml  saga_toolchains_manual.odt
saga-gis/src/accessories/helper/: convert2utf-8.bat  convert2utf-8.py  create_archive.py  create_python_toolboxes.py  doxygen_saga_api_chm  doxygen_saga_api_html  make_arcsaga_toolboxes.bat  make_macos_bundle.sh  make_python_api.bat  make_python_api_all.bat  make_python_api_x64.bat  make_python_toolboxes.bat  make_saga4qgis_toolboxes.bat  make_saga_api_doc.bat  make_saga_release.bat  make_saga_snapshot.bat  make_tools_interface.bat  make_translation_files.bat  saga_python_version_tester.bat  saga_python_version_tester.py  saga_setup_x64.iss
saga-gis/src/accessories/python/: __init__.py  chelsa.py  convert.py  helper.py  plot.py  saga.py  saga_python_example.bat  saga_python_example.py  saga_python_readme.txt  saga_python_runner.bat  srtm.py  tools.py
saga-gis/src/accessories/toolchains/: climate.xml  climate_tools.xml  climate_tools_temperature_downscaling.xml  gc_filter_gaussian.xml  gc_filter_laplacian.xml  gc_filter_rank.xml  gc_filter_simple.xml  gc_longitudinal_range.xml  gc_simple_filter.xml  gc_tools.xml  grid_and_polygon_to_table.xml  grid_filter.xml  grid_filter_notch.xml  grid_filter_sieve_and_clump.xml  grid_filter_simple_bulk.xml  grid_list_simple_filter.xml  grid_notch_filter.xml  grid_statistics_for_directions.xml  grid_tools.xml  grid_tools_bulk_no-data_change.xml  gridding.xml  (+59 more)
saga-gis/src/dev_tools/: ArcSAGA.py  CMakeLists.txt  MLB_Interface.cpp  MLB_Interface.h  Makefile.am  arctoolbox.cpp  arctoolbox.h  dev_tools.vc10.sln  dev_tools.vc14.sln  dev_tools.vcxproj  dev_tools.vcxproj.filters  qgistoolbox.cpp  tl_extract.cpp  tl_extract.h  tl_merge.cpp  tl_merge.h  tl_union.cpp  tl_union.h  tool_counter.cpp  tool_counter.h  tool_py_updater.cpp  tool_py_updater.h
saga-gis/src/modules/: Makefile.am
saga-gis/src/modules_contrib/: Makefile.am
saga-gis/src/modules_geostatistics/: Makefile.am
saga-gis/src/modules_recreations/: Makefile.am
saga-gis/src/modules_simulation/: Makefile.am
saga-gis/src/modules_template/: MLB_Interface.cpp  MLB_Interface.h  Makefile.am  My_Module.cpp  My_Module.h  README.txt  Template.sln  Template.vc10.sln  Template.vcproj  Template.vcxproj  Template.vcxproj.filters  create_custom_mlb_from_template.sh
saga-gis/src/saga_core/: CMakeLists.txt  Makefile.am
saga-gis/src/tools/: CMakeLists.txt  CMakePluginTemplate.cmake  Makefile.am  link_tester.cpp
saga_2/: ChangeLog  Makefile.am  configure.in
saga_2/src/: Makefile.am  makefile.linux  modules_all.bat  modules_all.dsw  modules_all.linux  modules_all.sln  saga.bat  saga.dsw  saga.sln  saga.vc10.sln
saga_2/src/dev_tools/: MLB_Interface.cpp  Makefile.am  dev_tools.vcxproj  dev_tools.vcxproj.filters  tl_extract.cpp  tl_extract.h  tl_merge.cpp  tl_merge.h  tl_union.cpp  tl_union.h
saga_2/src/modules/: Makefile.am  makefile.linux  modules.bat  modules.dsw  modules.linux  modules.sln
saga_2/src/modules_contrib/: Makefile.am  modules_contrib.bat  modules_contrib.dsw  modules_contrib.linux
saga_2/src/modules_geostatistics/: makefile.linux  modules_geostatistics.bat  modules_geostatistics.dsw  modules_geostatistics.linux  modules_geostatistics.sln
saga_2/src/modules_images/: Makefile.am  makefile.linux
saga_2/src/modules_io/: Makefile.am  makefile.linux  modules_io.bat  modules_io.dsw  modules_io.linux  modules_io.sln
saga_2/src/modules_io_gdal/: Makefile.am  modules_io_gdal.bat  modules_io_gdal.dsw  modules_io_gdal.linux  modules_io_gdal.sln
saga_2/src/modules_lectures/: Makefile.am  makefile.linux  modules_lectures.bat  modules_lectures.dsw  modules_lectures.linux  modules_lectures.sln
saga_2/src/modules_projection/: Makefile.am  makefile.linux  modules_projection.bat  modules_projection.dsw  modules_projection.linux  modules_projection.sln
saga_2/src/modules_recreations/: makefile.linux  modules_recreations.bat  modules_recreations.dsw  modules_recreations.linux  modules_recreations.sln
saga_2/src/modules_simulation/: Makefile.am  makefile.linux  modules_simulation.bat  modules_simulation.dsw  modules_simulation.linux  modules_simulation.sln
saga_2/src/modules_template/: modules_template.bat  modules_template.dsw  modules_template.linux
saga_2/src/modules_terrain_analysis/: Makefile.am  makefile.linux  modules_terrain_analysis.bat  modules_terrain_analysis.dsw  modules_terrain_analysis.linux  modules_terrain_analysis.sln
saga_2/src/modules_vigra/: Makefile.am  makefile.linux
saga_2/src/saga_core/: Makefile.am  makefile.linux  saga_core.dsw  saga_core.sln
(+8075 files in other folders)
